<resources>
    <string name="app_name">SMART CAMPUS</string>
    <string name="splashscreenlogo">SplashScreenLogo</string>
    <string name="smart_campus">SMART CAMPUS</string>


    <string name="no_worries_reset_password">No Worries Reset Password</string>
    <string name="e_mail">E-mail</string>
    <string name="back_to_login">Back To Login</string>
    <string name="todo_list">TODO List</string>
    <string name="profile">PROFILE</string>
    <string name="change_profile_pic">Change Profile Pic</string>
    <string name="connect_to_git">DIGI GIT</string>
    <string name="logo">GITLOGO</string>
    <string name="password">Password</string>
    <string name="welcome_to_git">WELCOME TO GIT</string>
    <string name="website">Website</string>
    <string name="notice">Notice</string>
    <string name="message">Message</string>
    <string name="hostel">Hostel</string>
    <string name="campus">Campus</string>
    <string name="send_notice">Send Notice</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add">Add</string>
    <string name="entc_engineering">Entc Engineering</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="saurabhjadhav_cse_gmail_com">SaurabhJadhav.CSE@gmail.com</string>


    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>

    <string name="i_am_a_talented_ambitious_and_hardworking_individual_with_broad_skills_and_experience_in_android_and_web_development_social_media_and_leading_projects_furthermore_i_am_adept_at_handling_multiple_tasks_on_a_daily_basis_competently_a_key_strength_is_communication_building_strong_relationships_with_people_in_order_to_deliver_the_best_results">I am a talented, ambitious and hardworking individual, with broad skills and experience in Android and Web Development, social media and leading projects. Furthermore, I am adept at handling multiple tasks on a daily basis competently. A key strength is communication; building strong relationships with people in order to deliver the best results.</string>

    <array name="lawsBig">

        <item>According to the International Research Centre for Women, almost 47 percent of girls
            are married before the age of 18. Currently, India ranks 13 in the world when it comes
            to child marriages. Since child marriage has been steeped into the Indian culture and
            tradition since centuries, it has been tough eliminating it.

            The Prohibition of Child Marriage Act was made effective in 2007. This act defines child
            marriage as a marriage where the groom or the bride are underage, that is, the bride is
            under 18 years of age or the boy is younger than 21 years.

            Parents trying to marry underage girls are subject to action under this law. Since the
            law makes these marriages illegal, it acts as a major deterrent.
        </item>

        <item>The objectives of this act is to provide – a special form of marriage in certain
            cases, provide for registration of certain marriages and, to provide for divorce. In a
            country like India and with the diverse religions and cast, when people from different
            faiths and caste chose to get married they do it under the Special Marriage Act.

            It is not applicable to the state of Jammu and Kashmir and also extends to intending
            spouses who are Indian nationals and living abroad.
        </item>
        <item>According to this act, taking or giving of dowry at the time of the marriage to the
            bride or the bridegroom and their family is to be penalised. Dowry system, giving and
            taking of dowry, is a norm in India. Dowry is often asked of the bride and her family by
            the groom and his family. The system has taken strong roots because women after marriage
            move in with their spouse and in-laws. Also, over the centuries, the lack for economic
            independence of women and the taboo towards divorce has resulted in bride burning. When
            demands for dowry even after marriage are not met by the girl’s families, many women are
            tortured, beaten and even burnt.
            It is one of the major challenges that our society is grappling with. Women openly
            complaining about it has helped to spread the word and encourage other women to take a
            stand.
        </item>
        <item>The Indian Divorce Act allows the dissolution of marriage, mutual consent, nullity of
            marriage, judicial separation and restitution of conjugal rights.

            Family Courts are established to file, hear, and dispose of such cases.
        </item>
        <item>This act regulates the employment of women and maternity benefits mandated by law. It
            states that a woman employee who has worked in an organisation for a period of at least
            80 days during the 12 months preceding the date of her expected delivery is entitled to
            receive maternity benefits, which includes maternity leave, nursing breaks, medical
            allowance, etc.
        </item>
        <item>The Act came into effect into 1972, was amended in 1975 and 2002. The aim of the Act
            is to reduce the occurrence of illegal abortion and consequent maternal mortality and
            morbidity.

            It clearly states the conditions under which a pregnancy can be ended or aborted and
            specifies the persons qualified to conduct the same.
        </item>
        <item>To ensure women’s safety at workplace, this Act seeks to protect them from sexual
            harassment at their place of work. Thirty-six percent of Indian companies and 25 percent
            among MNC’s are not complaint with the Sexual Harassment Act according to a FICCI-EY
            November 2015 report.

            Sexual harassment at workplace also includes – the use of language with sexual
            overtones, invasion of private space with a male colleague hovering too close for
            comfort, subtle touches and innuendoes.
        </item>
        <item>This Act prohibits indecent representation of women through advertisement or in
            publications, writings, paintings, figures or in any other manner.
        </item>
        <item>The National Commission for Women (NCW) is a statutory body of the Government of
            India, established in January 1992. Lalitha Kumara mangalam was appointed its
            Chairperson in 2014.

            The NCW represents the rights of women in India and provides a voice for their issues
            and concerns. The National Commission for Women Act aims to improve the status of women
            and worked for their economic empowerment.
        </item>
        <item>This Act prevents discrimination in terms of remuneration. It provides for payment of
            equal recompense to men and women workers.

            It is necessary to know these and other laws in place to protect the interests of women.
            Only if you are aware of your rights can you fight against any injustice meted out to
            you at home, at the workplace, or in the society.
        </item>
    </array>

</resources>