<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Authentication.ForgotPassword">

    <RelativeLayout
        android:id="@+id/ForgotPasswordRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <ImageView
        android:id="@+id/git_logo"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/git_logo"
        android:transitionName="logoImage" />

    <LinearLayout
        android:id="@+id/ForgotPasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ForgotPasswordRelativeLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_worries_reset_password"
            android:textColor="#8F8C8C"
            android:textSize="23sp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgetPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ForgotPasswordRelativeLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/e_mail"
        android:textColorHint="@color/black"
        android:transitionName="usernametransition"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/passwordRecoverButton"
        style="@style/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ForgotPasswordRelativeLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="Click Here To Reset"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/goBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

</RelativeLayout>